<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/displayTaskContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayEntryFragment">

    <ImageView
        android:id="@+id/displayMood"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/neutral_face"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/here_lies_your_title"
        app:layout_constraintBottom_toBottomOf="@+id/displayMood"
        app:layout_constraintEnd_toStartOf="@+id/displayPin"
        app:layout_constraintStart_toEndOf="@+id/displayMood"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/displayEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/displayMood" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/your_diary_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayMood" />

    <TextView
        android:id="@+id/displayDescription"
        android:layout_width="366dp"
        android:layout_height="577dp"
        android:layout_marginTop="10dp"
        android:text="@string/entrydescription"
        app:layout_constraintEnd_toEndOf="@+id/displayEdit"
        app:layout_constraintStart_toStartOf="@+id/displayMood"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/displayPin"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:background="#D5D6D6"
        android:src="@drawable/pinned"
        app:layout_constraintBottom_toBottomOf="@+id/displayMood"
        app:layout_constraintEnd_toStartOf="@+id/displayEdit"
        app:layout_constraintTop_toTopOf="@+id/displayMood" />

</androidx.constraintlayout.widget.ConstraintLayout>